Fixed: the overflow problem that LaTex always have

--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -222,6 +222,11 @@ headStyle(fontsize)
         content: ""
         line-height: h
 
+  .katex-html
+    overflow: auto
+    &::-webkit-scrollbar 
+      display: none
+
 #post-content
   margin-bottom: 1rem
 
